# grpc-go-pro

./: .gitignore  BUILD.bazel  README.md  Taskfile.yml  WORKSPACE.bazel  buf.gen.yaml  buf.yaml  deps.bzl  docker-compose.yaml  go.work.sum  versions.bzl
client/: BUILD.bazel  Dockerfile  go.mod  go.sum  interceptors.go  main.go
k8s/: client.yaml  server.yaml
proto/: go.mod  go.sum
proto/dummy/v1/: BUILD.bazel  dummy.pb.go  dummy.proto  dummy_grpc.pb.go
proto/todo/v1/: BUILD.bazel  todo.pb.go  todo.pb.validate.go  todo.proto  todo_grpc.pb.go
proto/todo/v2/: todo.pb.go  todo.pb.validate.go  todo.proto  todo_grpc.pb.go
server/: BUILD.bazel  Dockerfile  db.go  fake_db.go  go.mod  go.sum  gzip.go  impl.go  impl_test.go  in_memory.go  interceptors.go  limit.go  main.go  server_test.go  setup_test.go
todo/v2/: todo.pb.go  todo_grpc.pb.go
