load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude proto/**/*.go
# gazelle:prefix github.com/snirkop89/grpc-go-pro
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
